syntax = "proto3";

package kvstore;

option go_package = "github.com/meet-modi/Raft/proto/kvstore";

service KVStore {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool status = 1;
    string error = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool found = 2;
    string error = 3;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool deleted = 1;
    string error = 2;
}